--- a/settings.html
+++ b/settings.html
@@ -14,15 +14,13 @@
     .card{background:#fff;border:1px solid var(--line);border-radius:12px;box-shadow:0 4px 16px rgba(0,0,0,.05);padding:12px}
     .row{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
     .btn{border:0;background:var(--accent);color:#fff;border-radius:10px;padding:8px 12px;font-size:13px;cursor:pointer}
-    .btn.ghost{background:#eef4ff;color:#1a73e8}
     .filelabel{display:inline-flex;align-items:center;gap:10px;border:1px dashed var(--line);padding:10px 14px;border-radius:12px;background:#fff;cursor:pointer}
     input[type="file"]{display:none}
     .note{font-size:12px;color:var(--muted)}
     table{width:100%;border-collapse:collapse}
     th,td{border-bottom:1px solid var(--line);padding:6px 4px;font-size:13px;vertical-align:top}
-    th{color:#333;text-align:left}
-    input[type="text"],select{border:1px solid var(--line);border-radius:8px;padding:6px 9px;font-size:13px}
-    .badge{display:inline-flex;gap:8px;align-items:center;border:1px solid var(--line);padding:6px 10px;border-radius:10px;background:#fff}
+    th{text-align:left}
+    input[type="text"]{border:1px solid var(--line);border-radius:8px;padding:6px 9px;font-size:13px;width:100%}
     .grid{display:grid;grid-template-columns:repeat(7,1fr);gap:8px}
     .col{border:1px solid var(--line);border-radius:10px;padding:8px;background:#fff}
     .col h4{margin:0 0 6px}
@@ -31,36 +29,31 @@
   <!-- Mammoth for DOCX -->
   <script src="https://unpkg.com/mammoth@1.8.0/mammoth.browser.min.js"></script>
 
-  <!-- Firebase (compat) -->
+  <!-- Firebase compat -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-
   <script>
-    // ЗАМЕНИТЕ конфиг при необходимости на ваш из Firebase Console
- const firebaseConfig = {
-  apiKey: "AIzaSyC6651JMpQhj9FVoqKb_kRndo1r6prZ9kY",
-  authDomain: "keen-berm-470615-h6.firebaseapp.com",
-  projectId: "keen-berm-470615-h6",
-  storageBucket: "keen-berm-470615-h6.firebasestorage.app",
-  messagingSenderId: "772648903570",
-  appId: "1:772648903570:web:4aa21c0da258c82d52d74b",
-  measurementId: "G-7VGNRGC0G7"
-};
+    // ТВОЙ КОНФИГ (из Web App)
+    const firebaseConfig = {
+      apiKey: "AIzaSyC6651JMpQhj9FVoqKb_kRndo1r6prZ9kY",
+      authDomain: "keen-berm-470615-h6.firebaseapp.com",
+      projectId: "keen-berm-470615-h6",
+      storageBucket: "keen-berm-470615-h6.firebasestorage.app",
+      messagingSenderId: "772648903570",
+      appId: "1:772648903570:web:4aa21c0da258c82d52d74b",
+      measurementId: "G-7VGNRGC0G7"
+    };
     firebase.initializeApp(firebaseConfig);
+    const auth=firebase.auth(); const db=firebase.firestore();
+    const SITE_ID=(location.hostname||'').replace(/\./g,'-')||'default';
 
-    // Firestore + анонимная авторизация с «ожиданием готовности»
-    const auth = firebase.auth();
-    const db   = firebase.firestore();
-    const SITE_ID = (location.hostname||'').replace(/\./g,'-') || 'default';
-
-    let _authReadyResolve;
-    const authReady = new Promise(r => { _authReadyResolve = r; });
-    auth.onAuthStateChanged(u => { if (u) { _authReadyResolve(u); } });
-    auth.signInAnonymously().catch(err => {
-      console.error('Auth error:', err);
-      const s = document.getElementById('status');
-      if (s) s.textContent = 'Auth error: ' + (err.message||err.code||err);
+    // ждём анонимный логин перед записью/чтением
+    let _authReadyResolve; const authReady=new Promise(r=>{_authReadyResolve=r;});
+    auth.onAuthStateChanged(u=>{ if(u) _authReadyResolve(u); });
+    auth.signInAnonymously().catch(err=>{
+      console.error('Auth error:',err);
+      const s=document.getElementById('status'); if(s) s.textContent='Auth error: '+(err.message||err.code||err);
     });
   </script>
 </head>
@@ -77,15 +70,12 @@
         <input id="docxInput" type="file" accept=".docx,application/vnd.openxmlformats-officedocument.wordprocessingml.document" />
         <span class="note" id="status">…</span>
       </div>
-      <div class="note">
-        Формат: отдельная строка — имя; далее для него 7 значений (OFF / P / «9-21» / «9-12, 17-22» и т.п.). Комментарии после времени игнорируются.
-      </div>
+      <div class="note">Формат: имя на строке; затем 7 значений (OFF / P / «9-21» / «9-12, 17-22»). Комментарии после времени игнорируются.</div>
     </section>
 
     <section class="card">
       <div class="row" style="justify-content:space-between">
-        <strong>Неделя</strong>
-        <div class="note" id="weekNote"></div>
+        <strong>Неделя</strong><div class="note" id="weekNote"></div>
       </div>
       <div class="grid" id="weekGrid"></div>
     </section>
@@ -95,18 +85,13 @@
         <strong>Сотрудники</strong>
         <div class="row">
           <input type="text" id="newName" placeholder="Имя / שם" />
-          <label class="badge"><input type="checkbox" id="newBO" /> Backoffice</label>
+          <label class="row" style="gap:6px"><input type="checkbox" id="newBO"> Backoffice</label>
           <button class="btn" id="btnAdd">Добавить</button>
         </div>
       </div>
       <table id="empTable">
         <thead>
-          <tr>
-            <th>Имя</th>
-            <th>Backoffice</th>
-            <th>Смены по дням (формат: 9-12,17-22)</th>
-            <th></th>
-          </tr>
+          <tr><th>Имя</th><th>Backoffice</th><th>Смены (по дням, через запятую: 9-12,17-22)</th><th></th></tr>
         </thead>
         <tbody></tbody>
       </table>
@@ -114,13 +99,14 @@
   </main>
 
   <script>
-    /* ====== модель ====== */
-    let weekISO=[]; // 7 дат ISO (YYYY-MM-DD)
-    // employees: [{name, backend, shifts:{ d0:[{start,end,text}], …, d6:[…] }}]
+    // ===== модель =====
+    let weekISO=[]; // 7 дат
+    // employees: [{name, backend, shifts:{ d0:[{start,end,text}], … }}]
     let employees=[];
+    const COL='schedules';
     const weekdaysFull=['ראשון','שני','שלישי','רביעי','חמישי','שישי','שבת'];
 
-    /* ====== парсинг DOCX ====== */
+    // ===== утилиты парсинга =====
     async function extractTextFromDocx(file){
       const ab=await file.arrayBuffer();
       const { value } = await window.mammoth.extractRawText({ arrayBuffer: ab });
@@ -151,44 +137,34 @@
       return /[\p{L}]{2,}/u.test(s);
     }
     function parseOneRange(s){
-      const m = s.trim().match(/^(\d{1,2})(?::?(\d{1,2}))?-(\d{1,2})(?::?(\d{1,2}))?$/);
+      const m=(s||'').trim().match(/^(\d{1,2})(?::?(\d{1,2}))?-(\d{1,2})(?::?(\d{1,2}))?$/);
       if(!m) return null;
       const [,h1,mi1,h2,mi2]=m;
-      const sh = +h1 + (mi1?+mi1:0)/60;
-      const eh = +h2 + (mi2?+mi2:0)/60;
-      const txt = `${+h1}${mi1?':'+String(+mi1).padStart(2,'0'):''}-${+h2}${mi2?':'+String(+mi2).padStart(2,'0'):''}`;
+      const sh=+h1+(mi1?+mi1:0)/60, eh=+h2+(mi2?+mi2:0)/60;
+      const txt=`${+h1}${mi1?':'+String(+mi1).padStart(2,'0'):''}-${+h2}${mi2?':'+String(+mi2).padStart(2,'0'):''}`;
       return {start:sh,end:eh,text:txt};
     }
-    function splitRanges(cell){
-      if(!cell) return [];
-      // «9-12, 17-22» или «9-12 17-22» → несколько интервалов
-      return cell.split(/[,\s]+/).map(parseOneRange).filter(Boolean);
-    }
+    function splitRanges(cell){ return (cell||'').split(/[,\s]+/).map(parseOneRange).filter(Boolean); }
 
     function parseFromRaw(raw){
-      const ddmm = findWeekDDMM(raw);
+      const ddmm=findWeekDDMM(raw);
       if(ddmm.length!==7) throw new Error('Не нашёл 7 дат dd-mm подряд.');
-      weekISO = buildWeekISOFromDDMM(ddmm);
+      weekISO=buildWeekISOFromDDMM(ddmm);
 
       const lines = raw.split(/\r?\n/).map(s=>s.trim()).filter(Boolean);
       const rows=[];
       for(let i=0;i<lines.length;i++){
         const line=lines[i];
         if(looksLikeName(line)){
-          // соберём 7 валидных значений (OFF/P/время) из последующих строк
           const vals=[]; let j=i+1;
           while(j<lines.length && vals.length<7){
             const t=lines[j].trim();
             if(isShiftToken(t)) vals.push(t);
             j++;
           }
-          if(vals.length===7){
-            rows.push({name:line, values:vals});
-            i=j-1;
-          }
+          if(vals.length===7){ rows.push({name:line, values:vals}); i=j-1; }
         }
       }
-
       employees = rows.map(r=>{
         const shifts={};
         for(let d=0; d<7; d++){
@@ -201,56 +177,48 @@
       });
     }
 
-    /* ====== Firestore ====== */
-    const COL='schedules';
+    // ===== Firestore I/O =====
     let saveTimer=null;
-
     async function loadCloud(){
-      const s = document.getElementById('status');
+      const s=document.getElementById('status');
       try{
-        if (s) s.textContent='Loading…';
-        await authReady; // ждём анонимный логин
+        s.textContent='Loading…';
+        await authReady;
         const snap=await db.collection(COL).doc(SITE_ID).get();
         if(snap.exists){
           const data=snap.data()||{};
           if(Array.isArray(data.weekISO)) weekISO=data.weekISO;
           if(Array.isArray(data.employees)) employees=data.employees;
-          if (s) s.textContent='Loaded ✓';
+          s.textContent='Loaded ✓';
         } else {
-          if (s) s.textContent='No data yet';
+          s.textContent='No data yet';
         }
         renderAll();
       }catch(err){
-        console.error('Load error:', err);
-        if (s) s.textContent = 'Load error: ' + (err.message||err.code||err);
-        alert('Ошибка чтения Firestore:\n' + (err.message||err.code||String(err)));
+        console.error('Load error:',err);
+        s.textContent='Load error: '+(err.message||err.code||err);
+        alert('Ошибка чтения Firestore:\n'+(err.message||err.code||String(err)));
       }
     }
-
-    async function autoSave(){
+    function autoSave(){
       clearTimeout(saveTimer);
       saveTimer=setTimeout(async ()=>{
-        const s = document.getElementById('status');
+        const s=document.getElementById('status');
         try{
-          if (s) s.textContent='Saving…';
-          await authReady; // обязательно дождаться логина
-          await db.collection(COL).doc(SITE_ID).set({
-            weekISO,
-            employees,
-            updatedAt: firebase.firestore.FieldValue.serverTimestamp()
-          }, { merge:true });
-          if (s) s.textContent='Saved ✓';
-          renderAll(); // обновим счётчики/надпись недели
+          s.textContent='Saving…';
+          await authReady;
+          await db.collection(COL).doc(SITE_ID).set({weekISO,employees,updatedAt:firebase.firestore.FieldValue.serverTimestamp()},{merge:true});
+          s.textContent='Saved ✓';
+          renderAll();
         }catch(err){
-          console.error('Save error:', err);
-          if (s) s.textContent = 'Save error: ' + (err.message||err.code||err);
-          alert('Ошибка сохранения в Firestore:\n' + (err.message||err.code||String(err)));
+          console.error('Save error:',err);
+          s.textContent='Save error: '+(err.message||err.code||err);
+          alert('Ошибка сохранения Firestore:\n'+(err.message||err.code||String(err)));
         }
-      }, 300);
+      },300);
     }
 
-    /* ====== UI рендер ====== */
-    const statusEl=document.getElementById('status');
+    // ===== UI =====
     const weekGrid=document.getElementById('weekGrid');
     const weekNote=document.getElementById('weekNote');
     const tbody=document.querySelector('#empTable tbody');
@@ -262,89 +230,73 @@
       for(let i=0;i<7;i++){
         const col=document.createElement('div'); col.className='col';
         const h4=document.createElement('h4'); h4.textContent=`${weekdaysFull[i]} — ${new Date(weekISO[i]).toLocaleDateString('he-IL')}`;
-        col.appendChild(h4);
-        let total=0;
-        employees.forEach(e=>{ total += (e.shifts && e.shifts['d'+i] ? e.shifts['d'+i].length : 0); });
+        let total=0; employees.forEach(e=> total += (e.shifts && e.shifts['d'+i] ? e.shifts['d'+i].length : 0));
         const p=document.createElement('div'); p.className='note'; p.textContent=`Интервалов: ${total}`;
-        col.appendChild(p);
-        weekGrid.appendChild(col);
+        col.appendChild(h4); col.appendChild(p); weekGrid.appendChild(col);
       }
     }
-
     function renderEmployees(){
       tbody.innerHTML='';
-      employees.forEach((e, idx)=>{
+      employees.forEach((e,idx)=>{
         const tr=document.createElement('tr');
 
-        // имя
-        const tdName=document.createElement('td');
+        const tdN=document.createElement('td');
         const inp=document.createElement('input'); inp.type='text'; inp.value=e.name||'';
         inp.onchange=()=>{ e.name=inp.value.trim(); autoSave(); };
-        tdName.appendChild(inp); tr.appendChild(tdName);
+        tdN.appendChild(inp); tr.appendChild(tdN);
 
-        // backoffice
-        const tdBO=document.createElement('td');
+        const tdB=document.createElement('td');
         const cb=document.createElement('input'); cb.type='checkbox'; cb.checked=!!e.backend;
         cb.onchange=()=>{ e.backend=cb.checked; autoSave(); };
-        tdBO.appendChild(cb); tr.appendChild(tdBO);
+        tdB.appendChild(cb); tr.appendChild(tdB);
 
-        // смены на неделю: 7 инпутов (строка диапазонов через запятую)
-        const tdShifts=document.createElement('td');
+        const tdS=document.createElement('td');
         const grid=document.createElement('div'); grid.style.display='grid'; grid.style.gridTemplateColumns='repeat(7,1fr)'; grid.style.gap='6px';
         for(let d=0; d<7; d++){
           const cell=document.createElement('input'); cell.type='text';
           const arr=(e.shifts && e.shifts['d'+d])||[];
-          cell.value = arr.map(r=>r.text).join(',');
-          cell.placeholder = weekdaysFull[d];
+          cell.value=arr.map(r=>r.text).join(',');
+          cell.placeholder=weekdaysFull[d];
           cell.onchange=()=>{
             const v=cell.value.trim();
             if(!e.shifts) e.shifts={};
-            e.shifts['d'+d] = v? v.split(/[,\s]+/).map(parseOneRange).filter(Boolean) : [];
+            e.shifts['d'+d]= v? v.split(/[,\s]+/).map(parseOneRange).filter(Boolean) : [];
             autoSave();
           };
           grid.appendChild(cell);
         }
-        tdShifts.appendChild(grid);
-        tr.appendChild(tdShifts);
+        tdS.appendChild(grid); tr.appendChild(tdS);
 
-        // удалить сотрудника
-        const tdAct=document.createElement('td');
-        const del=document.createElement('button'); del.className='btn ghost'; del.textContent='×';
+        const tdA=document.createElement('td');
+        const del=document.createElement('button'); del.className='btn'; del.textContent='×';
         del.onclick=()=>{ employees.splice(idx,1); autoSave(); renderAll(); };
-        tdAct.appendChild(del); tr.appendChild(tdAct);
+        tdA.appendChild(del); tr.appendChild(tdA);
 
         tbody.appendChild(tr);
       });
     }
+    function renderAll(){ renderWeek(); renderEmployees(); }
 
-    function renderAll(){
-      renderWeek();
-      renderEmployees();
-    }
-
-    /* ====== события ====== */
-    document.getElementById('docxInput').onchange = async (e)=>{
+    // события
+    docxInput.onchange = async (e)=>{
       const f=e.target.files?.[0]; if(!f) return;
       try{
-        statusEl.textContent='Parsing…';
-        const raw = await extractTextFromDocx(f);
+        status.textContent='Parsing…';
+        const raw=await extractTextFromDocx(f);
         parseFromRaw(raw);
-        autoSave(); // сохранит в Firestore после authReady
+        autoSave();
       }catch(err){
         console.error(err);
+        status.textContent='Error';
         alert('Ошибка чтения/парсинга DOCX: '+err.message);
-        statusEl.textContent='Error';
       }
     };
-
-    document.getElementById('btnAdd').onclick=()=>{
-      const name=(document.getElementById('newName').value||'').trim();
-      const bo=document.getElementById('newBO').checked;
+    btnAdd.onclick=()=>{
+      const name=(newName.value||'').trim(); const bo=newBO.checked;
       if(!name) return;
       const shifts={}; for(let i=0;i<7;i++) shifts['d'+i]=[];
       employees.push({name, backend:bo, shifts});
-      document.getElementById('newName').value=''; document.getElementById('newBO').checked=false;
-      autoSave(); renderAll();
+      newName.value=''; newBO.checked=false; autoSave(); renderAll();
     };
 
     // init
